tests/codegen/fail/029-array-assign-element-out-of-upper-bound.hyg
let arr: array {int} = array(2, 1);
let index: int = 2 - 3;
arrayElem(arr, index) <- arrayElem(arr, 0);
print("should not print!")